--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  background-color: #121212;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+  background-color: rgb(15, 15, 30);
+  background-position: center;
+  text-align: center;
+  margin: auto;
+  margin-top: 10%;
+  border: 3px solid #ffffff;
+  width: 28%;
+  height: 30%;
+  border-radius: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+#inner-container {
+  color: white;
+}
+
+input {
+  margin-bottom: 10%;
+}
+
+h3 {
+  font-size: 15px;
+}
+
+h5 {
+  font-size: 12px;
+}
+
+@media only screen and (max-width: 900px) {
+  .App {
+    width: 85%;
+    margin: auto;
+    margin-top: 15%;
   }
 }
